--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <center>
         <div class="img-sec">
-            <img src="sampic.jpg" alt="sam pics">
+            <img src="sampic.JPG" alt="sam pics">
             <p class="text1">Perfume</p>
             <p class="large-text">Gabrielle Essence Eau De Perfume</p>
             <p class="small-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum quos eius facilis. 
